# DattorroPlateReverb

./: .gitignore  CLAUDE.md  CMakeLists.txt  IDENTITY.md  README.md  USER.md  juce-builder-setup-guide.md  setup-all.sh  setup-copilot.sh
.copilot/handoff/: copilot-handoff.md  design.md  spec.md
.github/agents/: juce-builder.agent.md
.github/hooks/: validation.hooks.json
.github/skills/build-check/: SKILL.md
.github/skills/handoff-reader/: SKILL.md
.github/skills/juce-builder/: SKILL.md
.github/skills/juce-impl/: SKILL.md
.github/skills/juce-testing/: SKILL.md
.openclaw/: workspace-state.json
.openclaw/agents/juce-orchestrator/agent/: AGENTS.md
.openclaw/agents/juce-worker/agent/: AGENTS.md  TOOLS.md
.openclaw/prompts/: phase1-scaffold.md  phase2-dsp-components.md  phase3-reverb-engine.md  phase4-integration.md  phase5-testing.md  phase5b-pluginval.md  phase5c-analysis.md  phase6-commit.md
.openclaw/scripts/: check-phase.sh  rollback.sh  spawn-claude-code.sh
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Tests/: AudioProcessingTests.cpp  PluginTests.cpp  main.cpp
memory/: 2026-02-22.md
